# stock-ml

./: .env.example  .gitignore  README.md  pyproject.toml
src/trading_lab/: __init__.py  cli.py  cli_info.py  cli_status.py
src/trading_lab/backtest/: __init__.py  costs.py  engine.py  metrics.py  risk.py  trades.py  vectorized_engine.py  walk_forward.py
src/trading_lab/common/: __init__.py  bias_checks.py  cache.py  data_utils.py  error_handling.py  io.py  logging.py  performance.py  pipeline.py  reproducibility.py  resilience.py  schemas.py  time.py  time_series.py  timeseries.py  validation.py
src/trading_lab/config/: __init__.py  constants.py  settings.py
src/trading_lab/data_sources/: __init__.py  quality_checks.py
src/trading_lab/data_sources/fundamentals/: __init__.py  fundamentals_stub.py
src/trading_lab/data_sources/macro/: __init__.py  fred_fetcher.py  rbi_stub.py
src/trading_lab/data_sources/news/: __init__.py  newsapi_fetcher.py
src/trading_lab/data_sources/prices/: __init__.py  yfinance_fetcher.py
src/trading_lab/data_sources/social/: __init__.py  reddit_fetcher.py
src/trading_lab/features/: __init__.py  build_features.py  feature_defs.py  feature_store.py
src/trading_lab/labeling/: __init__.py  targets.py
src/trading_lab/models/: __init__.py
src/trading_lab/models/rl/: __init__.py  env.py  train_rl.py
src/trading_lab/models/supervised/: __init__.py  model_zoo.py  predict_supervised.py  train_supervised.py
src/trading_lab/models/unsupervised/: __init__.py  regime_detection.py
src/trading_lab/reports/: __init__.py  generate_report.py  plots.py
src/trading_lab/unify/: __init__.py  unify_events.py  unify_prices.py
tests/: __init__.py  conftest.py  test_backtest_engine.py  test_backtest_smoke.py  test_common.py  test_data_utils.py  test_features.py  test_reproducibility.py  test_resilience.py  test_time_series.py  test_unify.py  test_validation.py  test_vectorized_backtest.py
