[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-lab"
version = "0.1.0"
description = "ML-driven trading research system for equities"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Trading Lab", email = "research@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "yfinance>=0.2.0",
    "ta>=0.11.0",
    "matplotlib>=3.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "joblib>=1.3.0",
    "tqdm>=4.65.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=10.0.0",
]

[project.optional-dependencies]
rl = [
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
]
lightgbm = [
    "lightgbm>=4.0.0",
]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
trading-lab = "trading_lab.cli:app"

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

