[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-lab"
version = "0.1.0"
description = "ML-driven trading research system for equities"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Trading Lab", email = "research@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["trading", "machine-learning", "backtesting", "finance", "equities", "quantitative-finance"]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "yfinance>=0.2.0",
    "ta>=0.11.0",
    "matplotlib>=3.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "joblib>=1.3.0",
    "tqdm>=4.65.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=10.0.0",
]

[project.optional-dependencies]
rl = [
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
]
lightgbm = [
    "lightgbm>=4.0.0",
]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pre-commit>=3.0.0",
    "mypy>=1.5.0",
    "types-python-dateutil>=2.8.19",
]

[project.scripts]
trading-lab = "trading_lab.cli:app"

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["trading_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

